// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect.svelte > should render items using custom component 1`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <!---->
    <items
      class="flex flex-wrap"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center pill"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <span>
            Alpha
          </span>
          <!---->
        </item>
         
        <rkt-icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </rkt-icon>
        <!---->
      </wrap-item>
      
    </items>
    
    
    <!---->
     
    <rkt-icon
      aria-label="opened"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
    </rkt-icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <list
      aria-label="list"
      class="flex w-full flex-shrink-0 select-none flex-col list"
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <!---->
      <item
        aria-selected="false"
        class="item"
        data-path="0"
        role="option"
      >
        <span>
          Alpha
        </span>
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="1"
        role="option"
      >
        <span>
          Beta
        </span>
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="2"
        role="option"
      >
        <span>
          Charlie
        </span>
        <!---->
      </item>
      
      <!---->
    </list>
    <!---->
  </scroll>
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 1`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col "
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <!---->
    <items
      class="flex flex-wrap"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center pill"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <!---->
          <!---->
           
          <p>
            One
          </p>
          <!---->
          <!---->
        </item>
         
        <rkt-icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </rkt-icon>
        <!---->
      </wrap-item>
      
    </items>
    
    
    <!---->
     
    <rkt-icon
      aria-label="closed"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rkt-icon>
    <!---->
  </selected-item>
   
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using default field mapping 2`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <!---->
    <items
      class="flex flex-wrap"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center pill"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <!---->
          <!---->
           
          <p>
            One
          </p>
          <!---->
          <!---->
        </item>
         
        <rkt-icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </rkt-icon>
        <!---->
      </wrap-item>
      
    </items>
    
    
    <!---->
     
    <rkt-icon
      aria-label="opened"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
    </rkt-icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <list
      aria-label="list"
      class="flex w-full flex-shrink-0 select-none flex-col list"
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <!---->
      <item
        aria-selected="false"
        class="item"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
         
        <p>
          Two
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
         
        <p>
          Three
        </p>
        <!---->
        <!---->
      </item>
      
      <!---->
    </list>
    <!---->
  </scroll>
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using field mappings 1`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col "
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <!---->
    <items
      class="flex flex-wrap"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center pill"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <!---->
          <!---->
          <!---->
          
          
          <!---->
           
          <p>
            Two
          </p>
          <!---->
          <!---->
        </item>
         
        <rkt-icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </rkt-icon>
        <!---->
      </wrap-item>
      
    </items>
    
    
    <!---->
     
    <rkt-icon
      aria-label="closed"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rkt-icon>
    <!---->
  </selected-item>
   
  <!---->
</input-select>
`;

exports[`MultiSelect.svelte > should render using field mappings 2`] = `
<input-select
  aria-label="test"
  class="relative flex flex-col open"
  role="listbox"
  tabindex="0"
>
  <selected-item
    aria-selected="false"
    class="flex w-full items-center"
    role="option"
    tabindex="-1"
  >
    <!---->
    <!---->
    <items
      class="flex flex-wrap"
    >
      <wrap-item
        aria-selected="false"
        class="flex flex-row items-center pill"
        role="option"
      >
        <item
          class="flex flex-row items-center"
        >
          <!---->
          <!---->
          <!---->
          
          
          <!---->
           
          <p>
            Two
          </p>
          <!---->
          <!---->
        </item>
         
        <rkt-icon
          aria-label="Remove"
          class="flex flex-shrink-0 items-center justify-center small"
          role="button"
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class="action-remove"
          />
        </rkt-icon>
        <!---->
      </wrap-item>
      
    </items>
    
    
    <!---->
     
    <rkt-icon
      aria-label="opened"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-opened"
      />
    </rkt-icon>
    <!---->
  </selected-item>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 0px;"
  >
    <list
      aria-label="list"
      class="flex w-full flex-shrink-0 select-none flex-col list"
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <!---->
      <item
        aria-selected="false"
        class="item"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          One
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Two
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="2"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Three
        </p>
        <!---->
        <!---->
      </item>
      
      <!---->
    </list>
    <!---->
  </scroll>
  <!---->
</input-select>
`;
